--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ plugins {
 
 
 android {
-    compileSdk 30
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.wsayan.mvvmstructure"
         minSdk 21
-        targetSdk 30
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -65,11 +65,10 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -81,7 +80,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     /*paging*/
-    implementation 'androidx.paging:paging-runtime-ktx:3.0.0-beta03'
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.0-alpha04'
 
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
@@ -110,8 +109,8 @@ dependencies {
     implementation 'com.github.florent37:inline-activity-result-kotlin:1.0.4'
     implementation 'io.coil-kt:coil:0.9.5'
 
-    implementation 'androidx.room:room-runtime:2.3.0'
-    kapt 'androidx.room:room-compiler:2.3.0'
+    implementation 'androidx.room:room-runtime:2.4.0-alpha05'
+    kapt 'androidx.room:room-compiler:2.4.0-alpha05'
 
     //Rx
     implementation "io.reactivex.rxjava2:rxjava:2.2.10"
@@ -139,10 +138,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.4.0-alpha01'
 
     // coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
     // otpview
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.2'
