--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ plugins {
     id 'dagger.hilt.android.plugin'
 }
 
-
 android {
     compileSdk 31
 
@@ -86,15 +85,17 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    /*paging*/
+    // paging
     implementation 'androidx.paging:paging-runtime-ktx:3.1.0-beta01'
 
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
+    // room
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     kapt 'android.arch.persistence.room:compiler:1.1.1'
     androidTestImplementation 'android.arch.persistence.room:testing:1.1.1'
-
+    implementation 'androidx.room:room-ktx:2.3.0'
+    kapt "androidx.room:room-compiler:2.3.0"
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
