--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,20 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
+    id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'kotlin-android-extensions'
+    id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
 }
 
 android {
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.wsayan.mvvmstructure"
         minSdk 21
-        targetSdk 31
+        targetSdk 33
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -51,12 +51,12 @@ android {
         demo {
             dimension "version"
             buildConfigField "String", "SERVER_URL", '"http://api.themoviedb.org/"'
-            buildConfigField "String", "API_KEY", properties.getProperty("tmdb.api_key", "")
+            buildConfigField "String", "API_KEY", properties.getProperty("api_key", "")
         }
         live {
             dimension "version"
             buildConfigField "String", "SERVER_URL", '"http://api.themoviedb.org/"'
-            buildConfigField "String", "API_KEY", properties.getProperty("tmdb.api_key", "")
+            buildConfigField "String", "API_KEY", properties.getProperty("api_key", "")
         }
     }
 
@@ -68,13 +68,19 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -85,55 +91,46 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    // paging
-    implementation 'androidx.paging:paging-runtime-ktx:3.1.0-beta01'
+    /*paging*/
+    implementation 'androidx.paging:paging-runtime-ktx:3.2.0-alpha02'
 
-    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-
-    // room
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     kapt 'android.arch.persistence.room:compiler:1.1.1'
     androidTestImplementation 'android.arch.persistence.room:testing:1.1.1'
-    implementation 'androidx.room:room-ktx:2.3.0'
-    kapt "androidx.room:room-compiler:2.3.0"
+
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     //navigation componenet
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
 
     //Okhttp3
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
-    //image picker
-    implementation 'com.github.dhaval2404:imagepicker:1.8'
-    implementation 'com.github.florent37:inline-activity-result-kotlin:1.0.4'
-    implementation 'io.coil-kt:coil:0.9.5'
+    // room
+    def room_version = "2.4.3"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
-    implementation 'androidx.room:room-runtime:2.4.0-alpha05'
-    kapt 'androidx.room:room-compiler:2.4.0-alpha05'
 
-    //Rx
-    implementation "io.reactivex.rxjava2:rxjava:2.2.10"
-    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
-    implementation 'com.google.code.gson:gson:2.8.6'
-
-    implementation 'androidx.fragment:fragment-ktx:1.3.6'
-    implementation 'androidx.activity:activity-ktx:1.3.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.2'
+    implementation 'androidx.activity:activity-ktx:1.5.1'
 
     //Hilt
-    implementation "com.google.dagger:hilt-android:2.35"
-    kapt "com.google.dagger:hilt-compiler:2.35"
+    implementation "com.google.dagger:hilt-android:2.42"
+    kapt "com.google.dagger:hilt-compiler:2.42"
 
     // firebase
-    implementation 'com.google.firebase:firebase-messaging:22.0.0'
+    implementation 'com.google.firebase:firebase-messaging:23.0.7'
 
     // workmanager
     implementation "android.arch.work:work-runtime-ktx:1.0.1"
@@ -148,8 +145,5 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     // coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
-
-    // otpview
-    implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 }
